<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/primaryLayout"

    >

 <TextView
     android:id="@+id/tvInputField"
     android:layout_width="match_parent"
     android:layout_height="250dp"
     android:background="@color/bgColorResult"
     android:padding="10dp"
     android:textSize="48sp"
     android:text="@string/result_text"
     android:textColor="@color/bgLayout"
     android:gravity="end|bottom"
     android:shadowColor="@color/black"
     android:shadowRadius="1.5"
     android:textStyle="bold"

     />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
    >
        <Button
            android:id="@+id/btnSeven"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_7"
            android:backgroundTint="@color/btnTextColor"
            android:layout_margin="5dp"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/btnEight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_8"
            android:layout_margin="5dp"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml"
            android:backgroundTint="@color/btnTextColor"/>

        <Button
            android:id="@+id/btnNine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_9"
            android:layout_margin="5dp"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml"
            android:backgroundTint="@color/btnTextColor"/>

        <Button
            android:layout_margin="5dp"
            android:id="@+id/btnDivide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onOperator"
            android:text="@string/Divide"
            tools:ignore="UsingOnClickInXml"
            android:backgroundTint="@color/btnColor"
            android:textColor="@color/bgColorResult"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/btnFour"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_4"
            android:backgroundTint="@color/btnTextColor"
            android:layout_margin="5dp"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/btnFive"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_5"
            android:layout_margin="5dp"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml"
            android:backgroundTint="@color/btnTextColor"/>

        <Button
            android:id="@+id/btnSix"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_6"
            android:layout_margin="5dp"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml"
            android:backgroundTint="@color/btnTextColor"/>

        <Button
            android:layout_margin="5dp"
            android:id="@+id/btnMulitply"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onOperator"
            android:text="@string/Multiply"
            tools:ignore="UsingOnClickInXml"
            android:backgroundTint="@color/btnColor"
            android:textColor="@color/bgColorResult"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/btnOne"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_1"
            android:backgroundTint="@color/btnTextColor"
            android:layout_margin="5dp"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/btnTwo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_2"
            android:layout_margin="5dp"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml"
            android:backgroundTint="@color/btnTextColor"/>

        <Button
            android:id="@+id/btnThree"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_3"
            android:layout_margin="5dp"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml"
            android:backgroundTint="@color/btnTextColor"/>

        <Button
            android:layout_margin="5dp"
            android:id="@+id/btnSubtract"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onOperator"
            android:text="@string/Minus"
            tools:ignore="UsingOnClickInXml"
            android:backgroundTint="@color/btnColor"
            android:textColor="@color/bgColorResult"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/btnDot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Dot"
            android:backgroundTint="@color/btnTextColor"
            android:layout_margin="5dp"
            android:onClick="onDecimalPoint"
            tools:ignore="UsingOnClickInXml"
            />

        <Button
            android:id="@+id/btnZero"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_0"
            android:backgroundTint="@color/btnTextColor"
            android:layout_margin="5dp"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml" />



        <Button
            android:id="@+id/btnCLR"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/clr"
            android:layout_margin="5dp"
            android:onClick="onCLear"
            tools:ignore="UsingOnClickInXml"
            android:backgroundTint="@color/bgColorResult"
            android:textColor="@color/btnTextColor"/>

        <Button
            android:layout_margin="5dp"
            android:id="@+id/btnAdd"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onOperator"
            android:text="@string/Plus"
            tools:ignore="UsingOnClickInXml"
            android:backgroundTint="@color/btnColor"
            android:textColor="@color/bgColorResult"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/btnEqual"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Equal"
            android:layout_margin="5dp"
            android:onClick="onEqual"
            tools:ignore="UsingOnClickInXml"
            android:backgroundTint="@color/btnColor"
            android:textColor="@color/bgColorResult"/>





    </LinearLayout>


</LinearLayout>